# SuperDatabase3000

./: .coveralls.yml  .gitignore  .travis.yml  LICENSE  Makefile  Pipfile  README.md  setup.cfg  setup.py
docs/: index.rst  superdatabase3000.rst
src/superdatabase3000/: __init__.py  hdf.py  packet.py  signal.py  socket.py  superdatabase3000.py
src/superdatabase3000/packet/: packet.py
tests/: test_db.py  test_hdf.py  test_packet.py  test_signal.py  test_socket.py
