[metadata]
description-file = README.md

[easy_install]
optimize = 2

[aliases]
test=pytest

[flake8]
# select = C,E,F,W,B,B9
ignore = E722, W503
exclude = tests, build, dist, .git, __pycache__, .eggs
format = pylint
show_source = True
max-line-length = 80
max-complexity = 10

[pylint]
output-format = colorized
max-line-length = 80
disable = global-statement, unused-import, useless-import-alias, too-few-public-methods, too-many-arguments, singleton-comparison # invalid-name
notes = FIXME, DEBUG
score = no
# function-naming-style = camelCase
# method-naming-style = camelCase
function-rgx = ^[_a-z][_a-zA-Z]*$
method-rgx = ^[_a-z][_a-zA-Z]*$
module-rgx = ^[_a-z][_a-zA-Z0-9]*$
variable-rgx = ^[_a-z][_a-zA-Z]*$
argument-rgx = ^[_a-z][_a-zA-Z]*$
attr-rgx = ^[_a-zA-Z][_a-zA-Z]*$
good-names=i,j,k,pk,x,y,X,Y,db